# pretix_ticket_data_plugin

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_exporter/: apps.py  exporter.py  signals.py
pretix_exporter/locale/de_Informal/LC_MESSAGES/: django.po
